kubernetes/grafana/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
    app.kubernetes.io/instance: grafana
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_35=Not Supported
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        enable.version-checker.io/grafana: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: grafana
              topologyKey: "kubernetes.io/hostname"
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: grafana
                topologyKey: topology.kubernetes.io/zone
      # tolerations:
      #   - key: node-role.kubernetes.io/control-plane
      #     effect: NoSchedule
      #   - key: node-role.kubernetes.io/control-plane
      #     effect: NoSchedule
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        supplementalGroups:
          - 0
        # fsGroup: 11472
        # runAsGroup: 11472
        # runAsUser: 11472
      hostname: grafana
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      serviceAccountName: grafana-sa
      containers:
        # renovate: datasource=docker depName=docker.io/grafana/grafana
        - image: docker.io/grafana/grafana:13.2.3@sha256:b28bae15e219c998fb0e0424ed724930cc61b1f61fb404d47c862f9a23f9e572
          imagePullPolicy: IfNotPresent
          name: grafana
          securityContext:
            # runAsGroup: 11472
            # runAsUser: 11472
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            limits:
              ephemeral-storage: "200Mi"
              memory: "1Gi"
              cpu: "250m"
            requests:
              ephemeral-storage: "100Mi"
              memory: "256Mi"
              cpu: "5m"
          volumeMounts:
            - name: grafana-cache
              mountPath: /var/lib/grafana
            # - name: grafana-plugins
            #   mountPath: /var/lib/grafana/plugins
            - name: grafana-dash-config
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboard-templates
              mountPath: /var/lib/grafana/dashboards
            - name: grafana-source-config
              mountPath: /etc/grafana/provisioning/datasources
            - name: tmp
              mountPath: /tmp
            - name: plugins-bundled
              mountPath: /usr/share/grafana/data/plugins-bundled
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 128Mi
        - name: grafana-cache
          emptyDir:
            sizeLimit: 128Mi
        - name: plugins-bundled
          emptyDir:
            sizeLimit: 256Mi
        - name: grafana-source-config
          configMap:
            name: grafana-source-config
        - name: grafana-dash-config
          configMap:
            name: grafana-dashboard-config
        - name: dashboard-templates
          configMap:
            name: grafana-dashboards
        # - name: grafana-plugins
        #   persistentVolumeClaim:
        #     claimName: grafana-plugins
      enableServiceLinks: false
